--- a/package.json
+++ b/package.json
@@ -1,12 +1,16 @@
 {
     "private": true,
+    "type": "module",
     "scripts": {
         "dev": "vite",
         "build": "vite build"
     },
     "devDependencies": {
-        "axios": "^1.1.2",
-        "laravel-vite-plugin": "^0.7.2",
-        "vite": "^4.0.0"
+        "axios": "^1.6.4",
+        "laravel-vite-plugin": "^1.0.5",
+        "vite": "^5.0"
+    },
+    "dependencies": {
+        "admin-lte": "^3.2.0"
     }
 }
